Fixed flickering problem after page transition in Safari

--- a/public/styles/triplog/_animation.scss
+++ b/public/styles/triplog/_animation.scss
@@ -69,7 +69,9 @@
 // This is needed for ng-animate to know how long a leaving node needs to stay
 @include keyframes(doNothing) {
   from {
+    @include transform(none);
   }
   to {
+    @include transform(none);
   }
 }
